# CaptureTheFlag

./: LICENSE  README.md  ctf-sim.py  pyproject.toml  train_simple_agent.py
src/capture_the_flag/: __init__.py  agent_factory.py  cli.py  gui.py
src/capture_the_flag/agents/: __init__.py  base.py  q_learning.py  random_agent.py  rule_based.py
src/capture_the_flag/core/: __init__.py  engine.py  map_templates.py  models.py
src/capture_the_flag/training/: __init__.py  simple_q_learning.py
