[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "capture-the-flag"
version = "0.1.0"
description = "A student-friendly Capture the Flag framework for agent-vs-agent experiments"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Student Project" }]
dependencies = []

[project.scripts]
ctf-sim = "capture_the_flag.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
